[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/settings/settingswindow.gd" type="Script" id=2]
[ext_resource path="res://ui/font/Ubuntu-M.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="SettingsWindow" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 66.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="AppTitle" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 56.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "VR Streaming Overlay"

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 70.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="General settings" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/General settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/General settings/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1272.0
margin_bottom = 609.0

[node name="LeftSettings" type="VBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer"]
margin_right = 629.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackgroundColor" type="HBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings"]
editor/display_folded = true
margin_right = 629.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/BackgroundColor"]
margin_right = 312.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Background color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/BackgroundColor"]
margin_left = 316.0
margin_right = 629.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select color"

[node name="BackgroundOpacity" type="HBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings"]
editor/display_folded = true
margin_top = 29.0
margin_right = 629.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/BackgroundOpacity"]
margin_right = 312.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Background opacity:"

[node name="HSlider" type="HSlider" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/BackgroundOpacity"]
margin_left = 316.0
margin_right = 629.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
ticks_on_borders = true

[node name="OverlaySize" type="HBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings"]
margin_top = 52.0
margin_right = 629.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/OverlaySize"]
margin_right = 312.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Overlay size in meters:"

[node name="HSlider" type="HSlider" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/OverlaySize"]
margin_left = 316.0
margin_right = 629.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="TwitchNick" type="HBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings"]
editor/display_folded = true
margin_top = 75.0
margin_right = 629.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/TwitchNick"]
margin_right = 312.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "TEMP (TWITCH NICK):"

[node name="LineEdit" type="LineEdit" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/TwitchNick"]
margin_left = 316.0
margin_right = 629.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TwitchCode" type="HBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings"]
editor/display_folded = true
margin_top = 108.0
margin_right = 629.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/TwitchCode"]
margin_right = 312.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "TEMP (TWITCH OAUTH):"

[node name="LineEdit" type="LineEdit" parent="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/TwitchCode"]
margin_left = 316.0
margin_right = 629.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightSettings" type="VBoxContainer" parent="TabContainer/General settings/MarginContainer/HBoxContainer"]
margin_left = 633.0
margin_right = 1262.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Widgets" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Credits" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Copyright" type="RichTextLabel" parent="TabContainer/Credits/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1272.0
margin_bottom = 609.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "© Copyright Benedikt <beniwtv@relamp.tk>
Licensed under the MIT license.

GitHub: [url]https://github.com/beniwtv/[/url]

-> Third party assets:

[b]Ubuntu Font[/b]
© Copyright 2010,2011 Canonical Ltd.
[url]https://design.ubuntu.com/font/[/url]

This Font Software is licensed under the Ubuntu Font Licence, Version
1.0. [url]https://launchpad.net/ubuntu-font-licence[/url]

-> Third party addons:

[b]GDNative based OpenVR plugin for Godot[/b]
Copyright © 2018 Bastiaan Olij (MIT license)
[url]https://github.com/GodotVR/godot_openvr[/url]

[b]Godot Settings Manager[/b]
Copyright © 2018-2019 Hugo Locurcio and contributors (MIT license)
[url]https://github.com/Calinou/godot-settings-manager[/url]
"
text = "© Copyright Benedikt <beniwtv@relamp.tk>
Licensed under the MIT license.

GitHub: https://github.com/beniwtv/

-> Third party assets:

Ubuntu Font
© Copyright 2010,2011 Canonical Ltd.
https://design.ubuntu.com/font/

This Font Software is licensed under the Ubuntu Font Licence, Version
1.0. https://launchpad.net/ubuntu-font-licence

-> Third party addons:

GDNative based OpenVR plugin for Godot
Copyright © 2018 Bastiaan Olij (MIT license)
https://github.com/GodotVR/godot_openvr

Godot Settings Manager
Copyright © 2018-2019 Hugo Locurcio and contributors (MIT license)
https://github.com/Calinou/godot-settings-manager
"
selection_enabled = true

[connection signal="color_changed" from="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/BackgroundColor/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/BackgroundOpacity/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/OverlaySize/HSlider" to="." method="_on_OverlaySizeHSlider_value_changed"]
[connection signal="text_changed" from="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/TwitchNick/LineEdit" to="." method="_on_LineEdit2_text_changed"]
[connection signal="text_changed" from="TabContainer/General settings/MarginContainer/HBoxContainer/LeftSettings/TwitchCode/LineEdit" to="." method="_on_LineEdit_text_changed"]
